<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/super_image"
        android:layout_width="252dp"
        android:layout_height="152dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/layout_margin"
        android:contentDescription="@string/image"
        android:paddingTop="@dimen/small_padding"
        android:src="@drawable/superman" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/description_text"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/name_text"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/nickname"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_character"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_done"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/done"
                android:visibility="visible" />
            <TextView
                android:id="@+id/nickname_text"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:visibility="gone" />





                            <ImageView
                                android:id="@+id/super_one"
                                android:layout_width="252dp"
                                android:layout_height="152dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/layout_margin"
                                android:contentDescription="@string/image"
                                android:paddingTop="@dimen/medium_padding"
                                android:src="@drawable/superman1" />

                            <TextView
                                android:id="@+id/text_scroll_one"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/scroll_text_one"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/year_scroll_one"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/more_small_padding"
                                android:text="@string/scroll_year_one"
                                android:textAlignment="center" />


                            <ImageView
                                android:id="@+id/super_two"
                                android:layout_width="252dp"
                                android:layout_height="152dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/layout_margin"
                                android:contentDescription="@string/image"
                                android:paddingTop="@dimen/high_paddig"
                                android:src="@drawable/asuperman2" />

                            <TextView
                                android:id="@+id/text_scroll_two"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/scroll_text_two"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/year_scroll_two"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/scroll_year_two"
                                android:textAlignment="center"/>


                            <ImageView
                                android:id="@+id/super_three"
                                android:layout_width="252dp"
                                android:layout_height="152dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/layout_margin"
                                android:contentDescription="@string/image"
                                android:paddingTop="@dimen/high_paddig"
                                android:src="@drawable/superman3" />

                            <TextView
                                android:id="@+id/text_scroll_three"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/scroll_text_three"
                                android:textAlignment="center" />

                            <TextView
                                android:id="@+id/year_scroll_three"
                                style="@style/TextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/scroll_year_three"
                                android:textAlignment="center"/>






        </LinearLayout>





    </ScrollView>





</LinearLayout>